# list-colouring

./: Makefile  NEWS.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
listcolouring/: __init__.py
src/: colour-petersen.py  demo.py
tests/: test_colours_on_neighbours.py  test_first-permissible-or-none-node.py  test_greedy-list-node-colouring.py  test_greedy-list-total-colouring.py  test_list_init_node.py  test_petersen.py
