[tool.poetry]
name = "list-colouring"
version = "0.1.0"
description = "List colouring in Python with NetworkX."
authors = ["Matthew Henderson <matthew.james.henderson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "list_colouring"}]

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.1"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
